--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,6 +2,11 @@
 <div id='logo'>
   <%= link_to image_tag('logo.png', :title => 'AIT Environmental Technology'), root_path %>
 </div>
-<h1>
+<h2>
   Providing Cost Effective Solutions for Improving Air Quality and Health
-</h1>
+</h2>
+<%= link_to image_tag('athletics_rnd.png', :title => 'Athletic Facilities', :id => 'athletic_img') %>
+<%= link_to image_tag('governmental_rnd.png', :title => 'Government Facilities', :id => 'governmental_img') %>
+<%= link_to image_tag('educational_rnd.png', :title => 'Universities & Colleges', :id => 'educational_img') %>
+<%= link_to image_tag('commercial_rnd.png', :title => 'Commercial', :id => 'commercial_img') %>
+<%= link_to image_tag('residential_rnd.png', :title => 'Residential', :id => 'residential_img') %>
