--- a/public/stylesheets/welcome.css
+++ b/public/stylesheets/welcome.css
@@ -1,28 +1,85 @@
+body {
+  text-align: center; }
+
 html {
   background: #010437 url("../images/abstract-background.jpg") no-repeat 0 -120px; }
+  
+footer {
+  clear: both; }
+  
+#athletic_img {
+  height: 130px;
+  margin: 20px 0 0 0;
+  position: absolute;
+  top: 0;
+  right: 270px;
+  width: 130px; }
+  
+#governmental_img {
+  height: 130px;
+  margin: 20px 0 0 120px;
+  position: absolute;
+  top: 65px;
+  right: 110px;
+  width: 130px; }
+  
+#educational_img {
+  height: 130px;
+  margin: 20px 0 0 200px;
+  position: absolute;
+  top: 230px;
+  right: 50px;
+  width: 130px; }
+  
+#commercial_img {
+  height: 130px;
+  margin: 20px 0 0 120px;
+  position: absolute;
+  top: 395px;
+  right: 110px;
+  width: 130px; }
+  
+#residential_img {
+  height: 130px;
+  margin: 20px 0 0 0px;
+  position: absolute;
+  top: 480px;
+  right: 270px;
+  width: 130px; }
+  
+#content {
+  margin: 0 auto;
+  position: relative;
+  text-align: left;
+  width: 700px; }
 
 #logo {
   background-color: white;
   border: 5px solid black;
-  height: 131px;
-  margin: 30px auto 0 auto;
+  float: left;
+  height: 107px;
+  margin: 225px 0 0 50px;
   text-align: center;
-  width: 479px;
-  box-shadow: 0 0 8px white; /* White shadow around entire box */
+  width: 379px;
   -moz-box-shadow: 0 0 8px white; /* Box shadow for Firefox */
   -webkit-box-shadow: 0 0 8px white; /* Box shadow for Webkit browsers */
+  box-shadow: 0 0 8px white; /* White shadow around entire box */
   /* IE won't do box shadows so filter creates an offset shadow in IE8 and below */
   filter: progid:DXImageTransform.Microsoft.Shadow(color='#ffffff', Direction=135, Strength=5); }
   #logo a {
     display: block; }
     #logo a img {
       border: 2px solid black;
+      height: 87px;
       margin-top: 3px;
-      padding: 5px; }
+      padding: 5px;
+      width: 359px; }
 
-h1 {
+h2 {
   color: white;
+  float: left;
+  font-size: 22px;
   font-style: italic;
-  line-height: 36px;
-  width: 500px;
-  margin: 50px auto 0 auto; }
+  line-height: 30px;
+  margin: 30px 0 0 50px;
+  width: 400px; }
