Added new layout to pages

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,8 +5,8 @@
 <h2>
   Providing Cost Effective Solutions for Improving Air Quality and Health
 </h2>
-<%= link_to image_tag('athletics_rnd.png', :title => 'Athletic Facilities', :id => 'athletic_img') %>
-<%= link_to image_tag('governmental_rnd.png', :title => 'Government Facilities', :id => 'governmental_img') %>
-<%= link_to image_tag('educational_rnd.png', :title => 'Universities & Colleges', :id => 'educational_img') %>
-<%= link_to image_tag('commercial_rnd.png', :title => 'Commercial', :id => 'commercial_img') %>
-<%= link_to image_tag('residential_rnd.png', :title => 'Residential', :id => 'residential_img') %>
+<%= link_to image_tag('athletics_rnd.png', :title => 'Athletic Facilities', :id => 'athletic_img'), athletics_path %>
+<%= link_to image_tag('governmental_rnd.png', :title => 'Government Facilities', :id => 'governmental_img'), governments_path %>
+<%= link_to image_tag('educational_rnd.png', :title => 'Universities & Colleges', :id => 'educational_img'), educations_path %>
+<%= link_to image_tag('commercial_rnd.png', :title => 'Commercial', :id => 'commercial_img'), commercials_path %>
+<%= link_to image_tag('residential_rnd.png', :title => 'Residential', :id => 'residential_img'), residentials_path %>
